--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ MagicKit.xcodeproj/xcuserdata/mz2.xcuserdatad/xcschemes/MagicKit.xcscheme
 MagicKit.xcodeproj/xcuserdata/mz2.xcuserdatad/xcschemes/MagicKitTest.xcscheme
 MagicKit.xcodeproj/xcuserdata/mz2.xcuserdatad/xcschemes/xcschememanagement.plist
 MagicKit.xcodeproj/project.xcworkspace/xcuserdata/mz2.xcuserdatad/UserInterfaceState.xcuserstate
+xcuserdata
